// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionPopover Component should render with actions 1`] = `
<div
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <Popover
    id="test-popover"
    left={true}
    trigger={
      <Button
        aria-describedby="test-popover"
        flat={true}
      >
        <MoreHoriz
          size={20}
        />
      </Button>
    }
  >
    <ActionList
      actions={
        Array [
          Object {
            "content": "Edit",
            "to": "/some/link",
          },
          Object {
            "content": "Delete",
            "onClick": [MockFunction],
          },
        ]
      }
    />
  </Popover>
</div>
`;

exports[`ActionPopover Component should render with no props 1`] = `
<div
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <Popover
    id="test-popover"
    left={true}
    trigger={
      <Button
        aria-describedby="test-popover"
        flat={true}
      >
        <MoreHoriz
          size={20}
        />
      </Button>
    }
  >
    <ActionList />
  </Popover>
</div>
`;
